<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_sharing_with_share_compat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sharing_with_share_compat"/>

    <Button
        android:id="@+id/btn_nav_on_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_on_map"/>

    <Button
        android:id="@+id/btn_ph_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ph_call"/>

    <Button
        android:id="@+id/btn_send_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_email"/>

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera"/>

    <Button
        android:id="@+id/btn_select_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_img"/>

    <Button
        android:id="@+id/btn_calendar_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calendar_event"/>
</LinearLayout>
